Fix Nutrition Guide

--- a/pages/nutritionguide.html
+++ b/pages/nutritionguide.html
@@ -51,8 +51,8 @@
     <!-- Asam Folat -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
-        <div class="container-materi-kiri">
-            <img src="/image/asam-folat.png" alt="">
+        <div class="container-materi">
+            <img src="/image/asam-folat.png">
             <div>
                 <h1>Asam Folat</h1>
                 <p>
@@ -60,18 +60,17 @@
                     penting selama kehamilan karena membantu mencegah cacat tabung saraf pada janin. Ini adalah nutrisi kunci
                     yang harus ada sebelum dan selama awal kehamilan. Sumber asam folat meliputi sayuran hijau seperti bayam,
                     brokoli, dan kacang-kacangan. Namun, seringkali diperlukan suplemen asam folat yang direkomendasikan oleh
-                    dokter untuk memastikan asupan yang cukup.              
-                 </p>
+                    dokter untuk memastikan asupan yang cukup. 
+                </p>
             </div>
         </div>
     </section>
 
-
     <!-- Kalsium -->
-    <!-- BACKGROUNDNYA PUTIH -->
-    <section style="background-color: #ffffff;">
-        <div class="container-materi-kanan">
-            <div style="text-align: right; transform: translateY(-15px);">
+    <!-- BACKGROUNDNYA BIRU -->
+    <section style="background-color: #d3e9f3;">
+        <div class="container-materi">
+            <div style="text-align: right;">
                 <h1>Kalsium</h1>
                 <p>
                     Kalsium adalah mineral penting yang diperlukan untuk perkembangan tulang dan gigi bayi. Pastikan Anda
@@ -88,24 +87,23 @@
     <!-- Zat Besi -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
-        <div class="container-materi-kiri">
-            <img src="/image/zat-besi.png" alt="">
+        <div class="container-materi">
+            <img src="/image/zat-besi.png">
             <div>
                 <h1>Zat Besi</h1>
                 <p>
                     Zat Besi penting untuk mencegah anemia selama kehamilan. Anemia dapat mengakibatkan kelelahan dan kurangnya
                     oksigen untuk bayi Anda. Sumber zat besi meliputi daging tanpa lemak, unggas, ikan, kacang-kacangan, dan
-                    biji-bijian. Pastikan Anda mencukupi kebutuhan zat besi Anda.
+                    biji-bijian. Pastikan Anda mencukupi kebutuhan zat besi Anda. 
                 </p>
             </div>
         </div>
     </section>
 
-
     <!-- Protein -->
-    <!-- BACKGROUNDNYA PUTIH -->
-    <section>
-        <div class="container-materi-kanan" style="gap: 30px;">
+    <!-- BACKGROUNDNYA BIRU -->
+    <section style="background-color: #d3e9f3;">
+        <div class="container-materi">
             <div style="text-align: right;">
                 <h1>Protein</h1>
                 <p>
@@ -118,56 +116,52 @@
         </div>
     </section>
 
-
     <!-- Serat dan Karbohidrat -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
-        <div class="container-materi-kiri" >
-            <img src="/image/serat-karbo.png" alt="">
+        <div class="container-materi">
+            <img src="/image/serat-karbo.png">
             <div>
                 <h1>Serat dan Karbohidrat</h1>
                 <p>
                     Selama kehamilan, serat membantu mencegah sembelit yang umum terjadi. Konsumsilah makanan tinggi serat seperti
                     buah-buahan, sayuran, dan sumber karbohidrat sehat seperti roti gandum utuh dan beras merah. Ini juga memberikan
-                    energi yang stabil selama hari-hari yang penuh perubahan hormonal.
+                    energi yang stabil selama hari-hari yang penuh perubahan hormonal. 
                 </p>
             </div>
         </div>
     </section>
 
-
     <!-- Omega-3 -->
-    <!-- BACKGROUNDNYA PUTIH -->
-    <section>
-        <div class="container-materi-kanan" style="gap: 30px;">
+    <!-- BACKGROUNDNYA BIRU -->
+    <section style="background-color: #d3e9f3;">
+        <div class="container-materi">
             <div style="text-align: right;">
                 <h1>Omega-3</h1>
                 <p>
-                    Asam lemak omega-3, terutama DHA, adalah penting untuk perkembangan otak dan mata bayi. Anda dapat mendapatkan omega-3 dari ikan berlemak seperti salmon, sarden, atau suplemen minyak ikan.
+                    Asam lemak omega-3, terutama DHA, adalah penting untuk perkembangan otak dan mata bayi. 
+                    Anda dapat mendapatkan omega-3 dari ikan berlemak seperti salmon, sarden, atau suplemen minyak ikan.
                 </p>
             </div>
-            <img  src="/image/omega-3.png" alt="left">
+            <img src="/image/omega-3.png" alt="">
         </div>
     </section>
-
-
 
     <!-- Air -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
-        <div class="container-materi-kiri">
-            <img src="/image/air.png" alt="">
+        <div class="container-materi">
+            <img src="/image/air.png">
             <div>
                 <h1>Air</h1>
                 <p>
                     Jangan lupakan pentingnya air selama kehamilan. Air membantu tubuh Anda memproduksi cairan ketuban, menjaga suhu
                     tubuh yang stabil, dan mendukung berbagai proses biologis yang penting selama kehamilan. Pastikan untuk minum cukup
-                    air sepanjang hari.
+                    air sepanjang hari. 
                 </p>
             </div>
         </div>
     </section>
-
 
     <!-- Footer -->
     <footer>
