--- a/pages/login.html
+++ b/pages/login.html
@@ -61,7 +61,7 @@
                     </div>
                     
                     <!-- Input Data -->
-                    <form action="" class="form-signup" id="signup-form">
+                    <form action="/user" class="form-signup" id="signup-form">
                         <div class="container-signup-input">
                             <p>Email</p> 
                             <input type="text" class="input-signup" id="signup-email">
